admin login and register complete working
